--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -198,6 +198,15 @@
   <data name="UnvalidCode" xml:space="preserve">
     <value>Unvalid QR code</value>
   </data>
+  <data name="NotApprovedDaysSinceLastDose" xml:space="preserve">
+    <value>To few days since last dose</value>
+  </data>
+  <data name="NotApprovedNoOfDoses" xml:space="preserve">
+    <value>Not approved number of doses</value>
+  </data>
+  <data name="NotApprovedVaccine" xml:space="preserve">
+    <value>Not approved vaccine</value>
+  </data>
 
   <data name="FirstnameLabel" xml:space="preserve">
     <value>First name: </value>
