--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -139,7 +139,7 @@
     <value>Scan certificate</value>
   </data>
   <data name="ScanBottomText" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
   <data name="ScanFlashText" xml:space="preserve">
     <value>Flash</value>
@@ -216,8 +216,6 @@
   <data name="UpdatePublicKeys" xml:space="preserve">
     <value>Public keys needs to be updated</value>
   </data>
-
-
   <data name="FirstnameLabel" xml:space="preserve">
     <value>First name: </value>
   </data>
@@ -328,5 +326,8 @@
   </data>
   <data name="NoVerificationText" xml:space="preserve">
     <value>No verification</value>
+  </data>
+  <data name="PrivacyPolicyLink" xml:space="preserve">
+    <value>Privacy policy</value>
   </data>
 </root>
