Show error modal for public key issues

--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -330,4 +330,7 @@
   <data name="PrivacyPolicyLink" xml:space="preserve">
     <value>Privacy policy</value>
   </data>
+  <data name="KeyModalErrorMessage" xml:space="preserve">
+    <value>Connect the app to internet and the keys will be downloaded automatically</value>
+  </data>
 </root>
