Show error modal for public key issues

--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -348,4 +348,7 @@
   <data name="ResultViewValidImageText" xml:space="preserve">
     <value>Valid icon</value>
   </data>
+  <data name="KeyModalErrorMessage" xml:space="preserve">
+    <value>Connect the app to internet and the keys will be downloaded automatically</value>
+  </data>
 </root>
