Accessibility on form elements added to Main, Result and InfoPage

--- a/VaccinbevisVerifiering/Resources/AppResources.sv.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.sv.resx
@@ -330,4 +330,22 @@
   <data name="PrivacyPolicyLink" xml:space="preserve">
     <value>Integritetspolicy</value>
   </data>
+  <data name="AboutViewCancelButtonText" xml:space="preserve">
+    <value>Avbryt knapp</value>
+  </data>
+  <data name="AboutViewLogotypeText" xml:space="preserve">
+    <value>DIGG logotyp</value>
+  </data>
+  <data name="MainViewImageText" xml:space="preserve">
+    <value>Bild av mobil med QR kod</value>
+  </data>
+  <data name="MainViewInfoButtonText" xml:space="preserve">
+    <value>Info knapp</value>
+  </data>
+  <data name="ResultViewFailedImageText" xml:space="preserve">
+    <value>Ej Godkänd ikon</value>
+  </data>
+  <data name="ResultViewValidImageText" xml:space="preserve">
+    <value>Godkänd ikon</value>
+  </data>
 </root>
