--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -330,4 +330,22 @@
   <data name="PrivacyPolicyLink" xml:space="preserve">
     <value>Privacy policy</value>
   </data>
+  <data name="AboutViewCancelButtonText" xml:space="preserve">
+    <value>Cancel button</value>
+  </data>
+  <data name="AboutViewLogotypeText" xml:space="preserve">
+    <value>DIGG logotype</value>
+  </data>
+  <data name="MainViewImageText" xml:space="preserve">
+    <value>Picture of a mobile device with a QR code</value>
+  </data>
+  <data name="MainViewInfoButtonText" xml:space="preserve">
+    <value>Info button</value>
+  </data>
+  <data name="ResultViewFailedImageText" xml:space="preserve">
+    <value>Not valid icon</value>
+  </data>
+  <data name="ResultViewValidImageText" xml:space="preserve">
+    <value>Valid icon</value>
+  </data>
 </root>
