--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -348,9 +348,9 @@
   <data name="ResultViewValidImageText" xml:space="preserve">
     <value>Valid icon</value>
   </data>
-  <data name="ForgedCovidCertficate" xml:space="preserve">
-    <value>Forged covid certificate</value>
-  </data>  
+  <data name="RevokedCertificateText" xml:space="preserve">
+    <value>Revoked certificate</value>
+  </data>
   <data name="KeyModalErrorMessage" xml:space="preserve">
     <value>Connect the app to internet and the keys will be downloaded automatically</value>
   </data>
