--- a/VaccinbevisVerifiering/Resources/AppResources.sv.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.sv.resx
@@ -190,7 +190,7 @@
     <value>Ogiltigt signerings certifikat</value>
   </data>
   <data name="NoSigningCertifcateCouldBeFound" xml:space="preserve">
-    <value>Inget signerings certifikat hittades</value>
+    <value>Inget signeringscertifikat hittades</value>
   </data>
   <data name="DCCExpired" xml:space="preserve">
     <value>Vaccinationsbevis utgånget</value>
@@ -365,5 +365,11 @@
   </data>
   <data name="UpdateViewTitle" xml:space="preserve">
     <value>Uppdatera din app</value>
+  </data>
+  <data name="NotApprovedMaxDaysSinceLastDosePartOne" xml:space="preserve">
+    <value>Mer än </value>
+  </data>
+  <data name="NotApprovedMaxDaysSinceLastDosePartTwo" xml:space="preserve">
+    <value> dagar sedan senaste vaccinering</value>
   </data>
 </root>
