--- a/VaccinbevisVerifiering/Resources/AppResources.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.resx
@@ -349,7 +349,7 @@
     <value>Valid icon</value>
   </data>
   <data name="RevokedCertificateText" xml:space="preserve">
-    <value>Revoked certificate</value>
+    <value>Fraudulent certificate</value>
   </data>
   <data name="KeyModalErrorMessage" xml:space="preserve">
     <value>Connect the app to internet and the keys will be downloaded automatically</value>
