--- a/VaccinbevisVerifiering/Resources/AppResources.sv.resx
+++ b/VaccinbevisVerifiering/Resources/AppResources.sv.resx
@@ -372,4 +372,7 @@
   <data name="NotApprovedMaxDaysSinceLastDosePartTwo" xml:space="preserve">
     <value> dagar sedan senaste vaccinering</value>
   </data>
+  <data name="UpdateViewPageText" xml:space="preserve">
+    <value>Tillbakaknappen är deaktiverad, uppdatering nödvändig</value>
+  </data>
 </root>
